GetOpportunity reason to add closeframework to filter it in req. Refreshwebresource on ADD /REMOVE of Qualification tab

--- a/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
+++ b/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
@@ -706,7 +706,7 @@ There will be several copies of the web resource visible in the debugger as "aru
                     'islabel': true
                 },
                 {
-                    'label': 'Remove Pre-Qualification Tab',
+                    'label': 'Remove Qualification Tab',
                     'action': function () {
                         parent.Arup.AddRemoveQualificationTab(this, false, "REMOVE");
                     },
