--- a/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
+++ b/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
@@ -454,7 +454,7 @@ There will be several copies of the web resource visible in the debugger as "aru
             ],
             'Cross_Region_Tab': [
                 {
-                    'label': 'Approve Decision to Proceed',
+                    'label': 'Progress to Developing Bid Stage',
                     'action': function () {
                         Log("Move next stage");
                         MoveNext();
