close_opportunty.html : isFramework == 'true' getopportunityreason= modified filter criteria changed some label

--- a/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_close_Opportunity.htm
+++ b/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_close_Opportunity.htm
@@ -92,7 +92,7 @@
             var select = document.getElementById("reason");
             var skipCloseOpportunity = false;
 
-            if (isFrameworkOpty && statusCode == 'won')
+            if (isFrameworkOpty == "true" && statusCode == 'won')
                 skipCloseOpportunity = true;
 
             if (skipCloseOpportunity) {
