--- a/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_close_Opportunity.htm
+++ b/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_close_Opportunity.htm
@@ -210,7 +210,6 @@
         .container {
             border-radius: 5px;
             background-color: #ffffff;
-            padding: 20px;
         }
 
         label {
@@ -266,13 +265,12 @@
     <meta>
     <meta>
 </head>
-<body onload="getOpportunityStatus();" style="overflow-wrap: break-word;" onfocusout="parent.setEmailRange();">
-   
-    <h1 style="color: #1B76D5; font-size: 25px;">Close Opportunity</h1>
-    <p id="frameworkText" style="visibility :hidden;font-size: 16px;font-family: undefined;">The framework has been won but that the opportunity record will be kept open to record its ongoing contribution to pipeline of work.</p>
-    <p style="font-family: undefined;">Provide the following information about why this opportunity is being closed.</p>
+<body onload="getOpportunityStatus();" style="overflow-wrap: break-word;" onfocusout="parent.setEmailRange();"> 
     <div class="container" style="font-family: undefined;">
         <form>
+            <h1 style="color: #1B76D5; font-size: 25px;">Close Opportunity</h1>
+            <p id="frameworkText" style="visibility :hidden;font-size: 16px;font-family: undefined; margin: 0px;">The framework has been won but that the opportunity record will be kept open to record its ongoing contribution to pipeline of work.</p>
+            <p style="font-family: undefined;">Provide the following information about why this opportunity is being closed.</p>
             <label>Status Reason:</label>
             <select required="" id="reason" name="reason">
                 <option selected="" disabled="" value="">Please Select</option>
