added text on close oportunity  html page

--- a/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_close_Opportunity.htm
+++ b/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_close_Opportunity.htm
@@ -45,8 +45,11 @@
                 document.getElementById("dateValue").setAttribute("max", today);
                 document.getElementById("dateValue").setAttribute("value", today);
 
-                if (isFrameworkOpty == "true" && statusCode == 'won') 
-                    document.getElementById("frameworkText").setAttribute("style", "visibility : visible;");
+                if (isFrameworkOpty == "true" && statusCode == 'won') {
+                    document.getElementById("frameworkText").setAttribute("style", "display:block; margin-bottom: 16px; margin-top: 16px;");
+                    document.getElementById("frameworkText2").setAttribute("style", "display:block; margin-bottom: 16px; margin-top: 16px;");
+                    document.getElementById("opportunityText").setAttribute("style", "display:none;margin: 0px;");                    
+                }
             }
         }
 
@@ -268,9 +271,10 @@
 <body onload="getOpportunityStatus();" style="overflow-wrap: break-word;" onfocusout="parent.setEmailRange();"> 
     <div class="container" style="font-family: undefined;">
         <form>
-            <h1 style="color: #1B76D5; font-size: 25px;">Close Opportunity</h1>
-            <p id="frameworkText" style="visibility :hidden;font-size: 16px;font-family: undefined; margin: 0px;">The framework has been won but that the opportunity record will be kept open to record its ongoing contribution to pipeline of work.</p>
-            <p style="font-family: undefined;">Provide the following information about why this opportunity is being closed.</p>
+            <h1 style="color: #1B76D5;font-size: 25px;">Close Opportunity</h1>
+            <p id="frameworkText" style="display: none; font-size: 16px; font-family: undefined; margin: 0px;">The framework/panel has been won but that the opportunity record will be kept open to record its ongoing contribution to pipeline of work.</p>
+            <p id ="frameworkText2" style="display: none;font-family: undefined; margin: 0px;">Please select the reason why we have been appointed to the framework/panel.</p>
+            <p id="opportunityText" style="display:block; font-family: undefined; margin-bottom: 16px; margin-top:0px">Provide the following information about why this opportunity is being closed.</p>
             <label>Status Reason:</label>
             <select required="" id="reason" name="reason">
                 <option selected="" disabled="" value="">Please Select</option>
